[metadata]
name = plex-postprocessor
author = Corey Leopold
author-email = cleopold73@gmail.com
summary = Package to post process plex dvr recorded files
license = MIT
description-file =
    README.md
home-page = http://pypi.python.org/pypi/plex-postprocessor
requires-python = >=3.5
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Programming Language :: Python

[files]
packages =
    plex-postprocessor